<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Projeto Georreferenciado</string>
    <string name="action_settings">Settings</string>

    <!-- Coloque seu Token do Mapbox na tag abaixo. Para saber a respeito do token, procure o site do Mapbox e faça o cadastro para o obter.
    Lembre-se de não commitar o código com seu token abaixo! Ele é único, e o transferir para o Github poderá causar problemas. -->
    <string name="string_acesso_token"></string>

    <!--Nomes das strings dos botoes-->
    <string name="menu_nome_mapa">Mapas</string>
    <string name="menu_nome_3d">3D</string>
    <string name="menu_nome_rotas">Rotas</string>
    <string name="menu_nome_pip">PIP</string>

    <string name="botao_navegacao">Começar navegação</string>

    <!--Cores padrões-->
    <color name="padrao_azul_menu">#062F6C</color>
    <color name="padrao_azul_menu_100">#012965</color>
    <color name="padrao_azul_menu_200">#558ddf</color>
    <color name="padrao_cinza">#c6d2e1</color>

    <!--Frases Principais-->
    <string name="permissao_explicacao">Para usar o GPS, é necessário conceder permissões de uso do GPS no aparelho!</string>
    <string name="cancela_rota">Botão para cancelar a rota</string>
    <string name="rotaDistancia">Distância</string>
    <string name="rotaTempo">Tempo</string>
    <string name="dadoHandler">Dado</string>
    <string name="msgRotaProcura">Procurando Rota</string>
    <string name="erro_pip">Não foi possível ativar o modo PIP neste dispositivo. Por favor, reinicie o aplicativo ou o reinstale se necessário.</string>
    <string name="erro_versao_android">Este dispositivo não tem suporte para essa função. (Somente Android 8.0 para cima)</string>

    <!-- Hints -->
    <string name="hintAutoComplete">Digite aqui um marcador</string>

</resources>
