<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:mapbox="http://schemas.android.com/apk/res-auto"

        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <include
            layout="@layout/content_main"
            android:id="@+id/include"/>

    <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            mapbox:mapbox_cameraTargetLat="-15.76911"
            mapbox:mapbox_cameraTargetLng="-47.89000"
            mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
            mapbox:mapbox_cameraZoom="11">

    </com.mapbox.mapboxsdk.maps.MapView>

    <TableLayout
            android:id="@+id/tabelaRota"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:background="@drawable/back_info_rota"
            app:layout_anchorGravity="bottom|center"
            android:layout_marginBottom="2dp"
            app:layout_anchor="@+id/include"
            android:visibility="gone">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/rotaDistancia"
                    style="@style/styleInfoRotaTitulo"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    app:layout_anchorGravity="bottom|center"
                    app:layout_anchor="@+id/include"/>

            <TextView
                    android:text="@string/rotaTempo"
                    style="@style/styleInfoRotaTitulo"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    app:layout_anchorGravity="bottom|center"
                    app:layout_anchor="@+id/include"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_anchorGravity="bottom|center">

            <TextView
                    android:text="@string/dadoHandler"
                    style="@style/styleInfoRotaDado"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:id="@+id/distanciaRota"
                    android:layout_marginEnd="2dp"
                    app:layout_anchorGravity="bottom|center"
                    app:layout_anchor="@+id/include"/>

            <TextView
                    android:text="@string/dadoHandler"
                    style="@style/styleInfoRotaDado"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:id="@+id/tempoRota"
                    app:layout_anchorGravity="bottom|center"
                    app:layout_anchor="@+id/include"/>

        </TableRow>

    </TableLayout>


    <TableLayout
            android:layout_width="200dp"
            android:layout_height="90dp"
            app:layout_anchorGravity="bottom|center"
            app:layout_anchor="@+id/include"
            android:id="@+id/carregaRota"
            android:visibility="gone"
            android:background="@color/colorWhite">

        <TableRow
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="45dp">

            <ProgressBar
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="2dp"/>

        </TableRow>

        <TableRow
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="45dp">

            <TextView
                    android:text="@string/msgRotaProcura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textoCarregando"
                    android:textStyle="bold"
                    android:fontFamily="@font/quicksand"
                    android:layout_gravity="center_horizontal"
                    />

        </TableRow>

    </TableLayout>


    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/padrao_azul_menu"
            android:clickable="true"
            android:src="@drawable/ic_gps_not_fixed_24dp"
            android:id="@+id/fabGPS"
            android:focusable="true"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/botaoFabMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            app:backgroundTint="@color/padrao_azul_menu"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_arrow_upward_black_24dp"
            android:focusable="true"/>

    <com.hlab.fabrevealmenu.view.FABRevealMenu
            android:id="@+id/menuPrincipal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:animateItems="true"
            app:menuBackgroundColor="@color/padrao_azul_menu"
            app:menuDirection="up"
            app:menuRes="@menu/fab_janela"
            app:menuSize="normal"
            app:menuTitleFontFamily="@font/quicksand"
            app:menuTitleTextColor="@color/colorWhite"
            app:showOverlay="true"
            app:showTitle="true">
    </com.hlab.fabrevealmenu.view.FABRevealMenu>


    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <Button
                android:id="@+id/botaoNavegar"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/padrao_azul_menu_100"
                android:enabled="false"
                android:visibility="gone"
                android:text="@string/botao_navegacao"
                android:textColor="@color/padrao_cinza"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        <ImageButton
                android:id="@+id/cancelaRota"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/ic_close_black_24dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:enabled="false"
                android:visibility="gone"
                android:tint="#ddd"
                app:backgroundTint="#BB0000"
                android:contentDescription="@string/cancela_rota"
                android:layout_toEndOf="@+id/botaoNavegar"/>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>